# Ai-Reader

./: .gitignore  LICENSE  README.md  m.py  pyproject.toml  requirement.txt  requirements.txt
.github/workflows/: docker-build.yml
ChatMaster/: db.sqlite3
ChatMaster/ChatMaster/: asgi.py  settings.py  urls.py  wsgi.py
ChatMaster/users/: admin.py  forms.py  models.py  urls.py  views.py
ChatMaster/users/static/: app.js
chat/: .dockerfile  .env  build.sh  conf.py  db.sqlite3  dockerfile  index.rst  manage.py  netlify.toml  pyproject.toml  requirements.txt  requirements_netlify.txt
chat/Ai_reader/: apps.py  dolly_answer.py  forms.py  model_answer.py  models.py  urls.py  views.py
chat/Ai_reader/migrations/: 0001_initial.py  0002_chat_active.py  0003_remove_chat_users_chat_sender.py  0004_alter_chat_sender.py  0005_rename_sender_chat_users.py  0006_chat_doc.py  0007_alter_chat_doc.py
chat/Ai_reader/static/: an.js
chat/_build/doctrees/: environment.pickle  index.doctree
chat/_build/html/: objects.inv  searchindex.js
chat/chat/: asgi.py  settings.py  urls.py  wsgi.py
chat/docs/: chat.pdf.rst  chat.users.rst  conf.py  index.rst
chat/media/: CHRIS_BROWN_-_FINE_CHINA.docx  Portugal._The_Man_-_Feel_it_still.docx
chat/pdf/: admin.py  apps.py  cron.py  models.py  urls.py  views.py
chat/pdf/migrations/: 0001_initial.py  0002_uploadedfile_user_id.py  0003_uploadedfile_vector_db.py  0004_alter_uploadedfile_file_alter_uploadedfile_vector_db.py
chat/users/: models.py  urls.py  views.py
chat/users/migrations/: 0001_initial.py  0002_blacklist.py
(+76 files in other folders)
